--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,9 +34,9 @@ jobs:
           path: "app/build/outputs/apk"
 
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1.8.1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "apk/**"
+          artifacts: "apk/**"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
