--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,16 +27,24 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.2.2
-        with:
-          name: ${{ matrix.os }}
-          path: "app/build/outputs/apk"
-
       - name: Create Release
-        uses: ncipollo/release-action@v1.8.1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          artifacts: "apk/**"
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
+          asset_path: app/build/outputs/apk
+          asset_name: "**/*.apk"
+          asset_content_type: application/vnd.android.package-archive
