--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: app/build/outputs/apk
-          asset_name: "**/*.apk"
+          asset_path: app/build/outputs/apk/release
+          asset_name: "*.apk"
           asset_content_type: application/vnd.android.package-archive
