--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,8 @@ name: Android CI
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    tags:
+      - '*.*.*'
 
 jobs:
   build:
@@ -34,7 +33,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - App Icon
+            - Kotlin Version
           draft: false
           prerelease: false
 
@@ -46,5 +49,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./app/build/outputs/apk/release/app-release-unsigned.apk
-          asset_name: Where.apk
+          asset_name: Where_${{ github.ref }}.apk
           asset_content_type: application/vnd.android.package-archive
