--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meyou.where">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/appName"
-        android:roundIcon="@drawable/app_icon"
+        android:roundIcon="@drawable/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/appTheme"
         android:usesCleartextTraffic="true">
@@ -27,8 +27,7 @@
         <activity
             android:name=".Home"
             android:configChanges="screenSize|screenLayout"
-            android:launchMode="singleTask" >
-
+            android:launchMode="singleTask">
 
 
         </activity>
@@ -102,7 +101,7 @@
 
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/me_path"/>
+                android:resource="@xml/me_path" />
 
         </provider>
 
