--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -49,5 +49,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./app/build/outputs/apk/release/app-release-unsigned.apk
-          asset_name: Where_${{ steps.create_release.outputs.tag }}.apk
+          asset_name: 'Where_${{ steps.create_release.outputs.tag }}.apk'
           asset_content_type: application/vnd.android.package-archive
