Fix failure [INSTALL_FAILED_INVALID_APK: Failed to extract native libraries, res=-2]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@drawable/app_icon_round"
         android:supportsRtl="true"
         android:theme="@style/appTheme"
+        android:extractNativeLibs="true"
         android:usesCleartextTraffic="true">
 
         <service
