--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,6 +40,12 @@ jobs:
             - Kotlin Version
           draft: false
           prerelease: false
+      
+      - name: Sign APK
+        run: |
+          curl -O https://LiangchengJ:${{ secrets.GITHUB_TOKEN }}@raw.githubusercontent.com/LiangchengJ/skey/main/android_release.jks
+          jarsigner -verbose:all -sigalg SHA512withRSA -digestalg SHA-512 -keystore android_release.jks ./app/build/outputs/apk/release/app-release-unsigned.apk LiangchengJ
+          mv ./app/build/outputs/apk/release/app-release-unsigned.apk ./app/build/outputs/apk/release/app-release.apk
 
       - name: Upload Release Asset
         id: upload-release-asset
@@ -48,6 +54,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./app/build/outputs/apk/release/app-release-unsigned.apk
+          asset_path: ./app/build/outputs/apk/release/app-release.apk
           asset_name: 'Where_${{ steps.create_release.outputs.tag }}.apk'
           asset_content_type: application/vnd.android.package-archive
