--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,12 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew assembleRelease
+        
+      - name: Sign APK
+        run: |
+          curl -O "https://LiangchengJ:${{ secrets.GITHUB_TOKEN }}@raw.githubusercontent.com/LiangchengJ/skey/main/sign.jks"
+          jarsigner -verbose:all -sigalg SHA512withRSA -digestalg SHA-512 -keystore sign.jks -keypass ${{ secrets.SIGN_KEYPASS }} -storepass ${{ secrets.SIGN_STOREPASS }} ./app/build/outputs/apk/release/app-release-unsigned.apk LiangchengJ
+          mv ./app/build/outputs/apk/release/app-release-unsigned.apk ./app/build/outputs/apk/release/app-release.apk
 
       - name: Create Release
         id: create_release
@@ -40,12 +46,6 @@ jobs:
             - Kotlin Version
           draft: false
           prerelease: false
-      
-      - name: Sign APK
-        run: |
-          curl -O https://LiangchengJ:${{ secrets.GITHUB_TOKEN }}@raw.githubusercontent.com/LiangchengJ/skey/main/sign.jks
-          jarsigner -verbose:all -sigalg SHA512withRSA -digestalg SHA-512 -keystore sign.jks -keypass ${{ secrets.SIGN_KEYPASS }} -storepass ${{ secrets.SIGN_STOREPASS }} ./app/build/outputs/apk/release/app-release-unsigned.apk LiangchengJ
-          mv ./app/build/outputs/apk/release/app-release-unsigned.apk ./app/build/outputs/apk/release/app-release.apk
 
       - name: Upload Release Asset
         id: upload-release-asset
